Checked out button misaligned Fixes #4289

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -387,7 +387,6 @@ body .hidden-focusable {
 body button.checkedOut {
 	color: var(--vscode-foreground);
 	opacity: 1 !important;
-	border: none;
 	background-color: transparent;
 }
 
